Fix: alignment, mobile menu, spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,8 @@ ul {
 }
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 ul,
@@ -269,9 +271,6 @@ address {
 .mobile-icon-back:focus {
   fill: #ffffff;
 }
-.mobile-nav-list {
-  margin-bottom: 168px;
-}
 
 .mobile-nav-item {
   font-weight: 700;
@@ -297,6 +296,7 @@ address {
 }
 .mobile-contacts {
   margin-left: auto;
+  margin-top: auto;
 }
 .mobile-contacts-list {
   display: flex;
@@ -336,10 +336,10 @@ ul.mobile-one-list {
   background: #2e2f42;
   padding: 72px 0;
   background-image: linear-gradient(
-    rgba(46, 47, 66, 0.7),
-    rgba(46, 47, 66, 0.7)
-  ),
-  url(../images/people-office-min.jpg);
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/Dark-bg-mob-min.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -382,18 +382,29 @@ ul.mobile-one-list {
 @media screen and (min-width: 768px) {
   .benefits {
     max-width: 100%;
-    padding: 188px 0;
+    padding: 112px 0;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/people-office-min.jpg);
+      url(../images/Dark-bg-tab-min.jpg);
   }
   .benefits-title {
     font-size: 56px;
     line-height: 1.07;
     margin-bottom: 48px;
     max-width: 496px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .benefits {
+    max-width: 100%;
+    padding: 188px 0;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office-min.jpg);
   }
 }
 
@@ -416,15 +427,15 @@ ul.mobile-one-list {
 .characteristic-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  gap: 72px;
   justify-content: center;
   list-style: none;
 }
 .characteristic-item {
   width: 100%;
 }
-.characteristic-icon {
-  visibility: hidden;
+.characteristic-item-div {
+  display: none;
 }
 
 .characteristic-title {
@@ -451,6 +462,10 @@ ul.mobile-one-list {
   }
   .characteristic-list {
     row-gap: 72px;
+    column-gap: 24px;
+  }
+  .characteristic-title {
+    text-align: left;
   }
 }
 @media screen and (min-width: 1158px) {
@@ -477,6 +492,12 @@ ul.mobile-one-list {
   }
   .characteristic-icon {
     visibility: visible;
+  }
+  .characteristic-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 120%;
+    letter-spacing: 0.02em;
   }
 }
 
@@ -581,6 +602,9 @@ a.one-link:focus {
     flex-wrap: nowrap;
     justify-content: center;
   }
+  .team {
+    padding: 120px 0;
+  }
 }
 
 /* ======================= Portfolio ======================= */
@@ -681,6 +705,9 @@ a.one-link:focus {
     position: relative;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: calc((100% - 48px) / 3);
+  }
+  .portfolio {
+    padding: 120px 0;
   }
 }
 /* ======================== Footer ======================== */
@@ -840,6 +867,10 @@ a.one-link:focus {
   .ftr-info {
     text-align: left;
   }
+  .endnote-menu-container {
+    justify-content: flex-start;
+    width: 584px;
+  }
 }
 @media screen and (min-width: 1158px) {
   .endnote-menu {
@@ -847,6 +878,8 @@ a.one-link:focus {
   }
   .endnote-menu-container {
     flex-wrap: nowrap;
+    gap: unset;
+    width: 100%;
   }
 
   .container-ftr {
